Added support for Jboss 6 embedded